--- a/styles/main.css
+++ b/styles/main.css
@@ -36,7 +36,6 @@ a{
 }
 body{
   background-color:#393A59;
-
   height: 100vh;
   font-family: 'Fira Code', monospace;
   display:flex;
@@ -108,7 +107,7 @@ div.title{
 #app{
   display:flex;
   flex-direction: column;
-  background-color:#282A35;
+  background-color:#222222;
   width:100%;
   height:100%;
   padding:8px;
