--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -6,6 +6,7 @@
 		align-items: center;
 		justify-content: center;
 		white-space: pre-wrap;
+		overflow: hidden;
 		* {
 			margin: 0;
 			padding: 0;
@@ -15,7 +16,6 @@
 		::-webkit-scrollbar-track {
 			box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 			-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-
 			background-color: #555;
 		}
 
