--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -43,6 +43,22 @@
 			color: #008d0e;
 		}
 
+		.red {
+			color: #ff0000;
+		}
+
+		.yellow {
+			color: #ffea00;
+		}
+
+		.purple {
+			color: #a600ff;
+		}
+
+		.orange {
+			color: #ff7f00;
+		}
+
 		a {
 			text-decoration: none;
 			color: rgb(238, 238, 238);
@@ -102,6 +118,7 @@
 			display: flex;
 			flex-direction: row;
 			margin-top: 5px;
+			flex-wrap: wrap;
 		}
 
 		input {
@@ -111,6 +128,8 @@
 			width: 100%;
 			font-size: 16px;
 			font-family: 'Fira Code', monospace;
+			height: 20px;
+			width: fit-content;
 		}
 
 		input:focus {
