--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -125,6 +125,7 @@
 			border: none;
 			background-color: unset;
 			color: rgb(238, 238, 238);
+			caret-shape: block;
 			width: 100%;
 			font-size: 16px;
 			font-family: 'Fira Code', monospace;
